# travel-book-utils

./: .gitignore  README.md  download_osm.py  generate_map.py  paper_texture.py  pencil.py  pyproject.toml  render_watercolor.py
book-template/: example.tex  travelbook.cls
map-generation/: README.md
map-generation/src/pencil_map/: __init__.py  config.py  drawing.py  layers.py  render.py
map-generation/tests/: test_pencil_map.py
src/pencil_map/: __init__.py  io.py  osm.py  render.py
tests/: test_pencil_map.py
